@@ -1,6 +1,6 @@
 Name:           memcached
 Version:        1.2.2
-Release:        2%{?dist}
+Release:        4%{?dist}
 Summary:        High Performance, Distributed Memory Object Cache
 
 Group:          System Environment/Daemons
@@ -10,14 +10,13 @@ Source0:        http://www.danga.com/memcached/dist/%{name}-%{version}.tar.gz
 BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 BuildRequires:  libevent-devel
-
+BuildRequires:  perl(Test::More)
+Requires: initscripts
 Requires(post): /sbin/chkconfig
 Requires(preun): /sbin/chkconfig, /sbin/service
 Requires(postun): /sbin/service
 
-
 %description
-
 memcached is a high-performance, distributed memory object caching
 system, generic in nature, but intended for use in speeding up dynamic
 web applications by alleviating database load.
@@ -27,21 +26,21 @@ web applications by alleviating database load.
 
 
 %build
-%configure \
-	--enable-threads
+%configure --enable-threads
 
 make %{?_smp_mflags}
 
 %check
-# skip this for now, this requires perl and a bunch of other stuff
-# and may not work from within rpmbuild
-#make test
+make test
 
 %install
 rm -rf %{buildroot}
 make install DESTDIR=%{buildroot}
 
-# Perl script monitoring memcached
+# remove memcached-debug
+rm -f %{buildroot}/%{_bindir}/memcached-debug
+
+# Perl script for monitoring memcached
 install -Dp -m0755 scripts/memcached-tool %{buildroot}%{_bindir}/memcached-tool
 
 # Init script
@@ -84,12 +83,20 @@ exit 0
 %config(noreplace) %{_sysconfdir}/sysconfig/%{name}
 %{_bindir}/memcached-tool
 %{_bindir}/memcached
-%{_bindir}/memcached-debug
 %{_mandir}/man1/memcached.1*
 %{_initrddir}/memcached
 
 
 %changelog
+* Sat May 12 2007 Paul Lindner <lindner@inuus.com> - 1.2.2-4
+- Remove tabs from spec file, rpmlint reports no more errors
+
+* Thu May 10 2007 Paul Lindner <lindner@inuus.com> - 1.2.2-3
+- Enable build-time regression tests
+- add dependency on initscripts
+- remove memcached-debug (not needed in dist)
+- above suggestions from Bernard Johnson
+
 * Mon May  7 2007 Paul Lindner <lindner@inuus.com> - 1.2.2-2
 - Tidyness improvements suggested by Ruben Kerkhof in bugzilla #238994
 
