@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 21;
+use Test::More tests => 11;
 
 use FindBin qw($Bin);
 use lib "$Bin/lib";
@@ -23,14 +23,4 @@ foreach my $conn (1..10) {
   $sock = $server->new_sock;
   ok(defined($sock), "Made connection $conn");
   push(@sockets, $sock);
-}
-
-TODO: {
-local $TODO = "Need to decide on what -c semantics are";
-
-foreach my $conn (11..20) {
-  $sock = $server->new_sock;
-  ok(defined($sock), "Connection $conn");
-  push(@sockets, $sock);
-}
 }
